[gd_scene load_steps=3 format=3 uid="uid://c6reu8t5t0eh0"]

[ext_resource type="Script" path="res://projectiles/shotgun_bullet.gd" id="1_r3ckj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_husvq"]
size = Vector2(3.99999, 6.00001)

[node name="shotgun_bullet" type="Area2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_r3ckj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.63588e-06, 5.275e-06)
rotation = 1.5708
shape = SubResource("RectangleShape2D_husvq")

[node name="bullet_duration" type="Timer" parent="."]
wait_time = 0.15

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.458824, 0.458824, 0.458824, 1)
polygon = PackedVector2Array(-3, -2, 3, -2, 3, 0, 3, 2, -3, 2)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="bullet_duration" to="." method="_on_bullet_duration_timeout"]
